--- a/info.html
+++ b/info.html
@@ -2,6 +2,8 @@
     <meta charset="utf-8">
 
         <link rel="stylesheet" type="text/css" href="css/info.css">
+            <link rel="stylesheet" type="text/css" href="myBoot.css">
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
