--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,9 @@
-<html><head>
-    <meta charset="utf-8">
+<!DOCTYPE html>
+
+<html>
+  <head>
+    <title>Real Madrid</title>
+    <meta charset="UTF-8">
 
         <link rel="stylesheet" type="text/css" href="css/contact.css">
             <link rel="stylesheet" type="text/css" href="myBoot.css">
