--- a/info.html
+++ b/info.html
@@ -1,5 +1,9 @@
-<html><head>
-    <meta charset="utf-8">
+<!DOCTYPE html>
+
+<html>
+  <head>
+    <title>Real Madrid</title>
+    <meta charset="UTF-8">
 
         <link rel="stylesheet" type="text/css" href="css/info.css">
             <link rel="stylesheet" type="text/css" href="myBoot.css">
@@ -11,7 +15,9 @@
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
 
-  </head><body>
+  </head>
+
+  <body>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
