--- a/table.html
+++ b/table.html
@@ -1,5 +1,10 @@
-<html><head>
-    <meta charset="utf-8">
+<!DOCTYPE html>
+
+<html>
+
+<head>
+    <title>Real Madrid</title>
+    <meta charset="UTF-8">
 
         <link rel="stylesheet" type="text/css" href="css/team.css">
             <link rel="stylesheet" type="text/css" href="myBoot.css">
@@ -11,17 +16,19 @@
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
 
-  </head><body>
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  </head>
 
-  ga('create', 'UA-86216850-1', 'auto');
-  ga('send', 'pageview');
+  <body>
+      <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-</script>
+      ga('create', 'UA-86216850-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
     <div class="cover">
       <div class="navbar navbar-default" id="menu">
         <div class="container">
