--- a/info.html
+++ b/info.html
@@ -5,8 +5,8 @@
     <title>Real Madrid</title>
     <meta charset="UTF-8">
 
-        <link rel="stylesheet" type="text/css" href="css/info.css">
-            <link rel="stylesheet" type="text/css" href="myBoot.css">
+    <link rel="stylesheet" type="text/css" href="css/info.css">
+    <link rel="stylesheet" type="text/css" href="myBoot.css">
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -73,22 +73,22 @@
     <p>Przypomnijmy, że 9 października w meczu reprezentacji kapitan Królewskich doznał urazu 2. stopnia w więzadle pobocznym piszczelowym. Po badaniach okazało się, że reszcie kolana nic się nie stało, ale i tak stwierdzono, że zawodnik najwcześniej wróci w końcówce listopada. Ramos rozpoczął jednak ciężką pracę z jednym celem: dojściem do pełnej dyspozycji na derby z Atlético, które zostaną rozegrane 19 listopada. Na dzisiaj ten cel jest możliwy do wypełnienia i ma znajdować się na horyzoncie stopera. Oczywiście rehabilitacja dalej musi tak dobrze jak dotychczas. Zidane nie podejmie żadnego ryzyka, do czego już wszystkich przyzwyczaił.
     <br><br>
     Dziennik ocenia, że kluczowym aspektem dobrej pracy Ramosa jest jego siła fizyczna. Jego ciało doskonale odpowiada na ciężką rehabilitację, na jaką postawili lekarze. W Valdebebas wszyscy z zadowoleniem obserwują kolejne kroki kapitana.
-</p></div><div class="col-md-6"> <img src="images/ramos.jpg" class="img-responsive"> </div></div></div></div>
+</p></div><div class="col-md-6"> <img src="images/ramos.jpg" class="img-responsive" alt="ramos"> </div></div></div></div>
     
 
     <div class="section"> <div class="container mySection"> <div class="row"> <div class="col-md-6"> <h1>Lucas Vázquez z porozumieniem ws. nowego kontraktu</h1> 
-    <h3></h3> 
+    <br>
     <p>Lucas Vázquez doszedł z klubem do porozumienia w sprawie przedłużenia kontraktu do 2022 roku. Dziennik AS i telewizja Cuatro podały, że agent zawodnika zakończył z klubem negocjacje w sprawie odnowienia obecnego porozumienia, które łączy Hiszpana z klubem do 2020 roku. Nie podano informacji o nowych zarobkach atakującego. Na dzisiaj Lucas dostaje najmniejszą pensję w pierwszej drużynie, około miliona euro netto rocznie. Ten ruch Królewskich wpisuje się w ostatnią serię nowych umów, które mają zabezpieczyć najważniejszych piłkarzy przed zakusami z Anglii.
   <br><br>
-Hiszpan wrócił do Realu Madryt w 2015 roku z Espanyolu za milion euro. Swoją pracą i pokorą zdobył uznanie fanów i ważną rolę w zespole. Dzisiaj znajduje się wśród najważniejszych zmienników. W tym sezonie na 12 oficjalnych spotkań 25-latek grał w 10, notując doskonałe występy. Co więcej, przy braku Modricia i Casemiro powstała opcja wystawiania Lucasa w drugiej linii.</p></div><div class="col-md-6"> <img src="images/lucas.jpg" class="img-responsive"> </div></div></div></div>
+Hiszpan wrócił do Realu Madryt w 2015 roku z Espanyolu za milion euro. Swoją pracą i pokorą zdobył uznanie fanów i ważną rolę w zespole. Dzisiaj znajduje się wśród najważniejszych zmienników. W tym sezonie na 12 oficjalnych spotkań 25-latek grał w 10, notując doskonałe występy. Co więcej, przy braku Modricia i Casemiro powstała opcja wystawiania Lucasa w drugiej linii.</p></div><div class="col-md-6"> <img src="images/lucas.jpg" class="img-responsive" alt="lucas"> </div></div></div></div>
 
 
-     <div class="section "> <div class="container mySection"> <div class="row"> <div class="col-md-6"> <h1>Modrić odrzucił wielkie pieniądze z Chin</h1> <h3></h3> 
+     <div class="section "> <div class="container mySection"> <div class="row"> <div class="col-md-6"> <h1>Modrić odrzucił wielkie pieniądze z Chin</h1><br>
      <p>W środę Luka Modrić przedłużył kontrakt z Realem Madryt do 2020 roku. MARCA określa tamtą uroczystość pokazem wierności Chorwata wobec klubu, identyfikowania się z nim, projektem i miastem. Pomocnik jest w Hiszpanii szczęśliwy, a pokazać to miał także przez odrzucenie ofert z Chin.<br><br>
 
       Dziennik podaje, że latem kluby z tego kraju zaczęły przedstawiam graczowi oferty zaczynające się od 15 milionów euro netto za sezon przez cztery lata. Walka o Modricia trwała podobno do końca i skończyła się na pułapie 20 milionów euro za rok gry. Zawodnik jednak na to nie patrzył i rozmawiał tylko z Królewskimi. Jego nowa umowa gwarantuje mu około 8 milionów euro netto za sezon.
       <br><br>
-      Chińczycy widzieli w Modriciu jeden z piłkarskich odnośników, które chcą sprowadzić do siebie. Celem Azjatów jest promowanie futbolu w swoim kraju i poza jego granicami, by skutecznie powalczyć o organizację mundialu w 2026 roku. Chorwat odrzucił taką opcję, co doceniają działacze Królewskich. Na Bernabéu chwali się nie tylko postawę pomocnika na boisku, ale także jego przywiązanie do klubu. Sam Luka na konferencji prasowej stwierdził, że czuje się z rodziną w Madrycie bardzo dobrze i na dzisiaj jest w najlepszej formie swojego życia. Modrić wie, że to zasługa otoczenia, z którego za nic nie chce się ruszać.</p></div><div class="col-md-6"> <img src="images/modric.jpg" class="img-responsive"> 
+      Chińczycy widzieli w Modriciu jeden z piłkarskich odnośników, które chcą sprowadzić do siebie. Celem Azjatów jest promowanie futbolu w swoim kraju i poza jego granicami, by skutecznie powalczyć o organizację mundialu w 2026 roku. Chorwat odrzucił taką opcję, co doceniają działacze Królewskich. Na Bernabéu chwali się nie tylko postawę pomocnika na boisku, ale także jego przywiązanie do klubu. Sam Luka na konferencji prasowej stwierdził, że czuje się z rodziną w Madrycie bardzo dobrze i na dzisiaj jest w najlepszej formie swojego życia. Modrić wie, że to zasługa otoczenia, z którego za nic nie chce się ruszać.</p></div><div class="col-md-6"> <img src="images/modric.jpg" class="img-responsive" alt="Modric"> 
     </div></div></div></div>
         
     <footer class="section section-primary">
