--- a/team.html
+++ b/team.html
@@ -27,7 +27,7 @@
         ga('send', 'pageview');
 
       </script>
-      
+
     <div class="cover">
       <div class="navbar navbar-default" id="menu">
         <div class="container">
@@ -63,16 +63,16 @@
       </div>
       <div class="cover-image"></div>
       <div class="container myCaption" >
-        <table class="table" cellspacing="0" cellpadding="0">
+        <table class="table" >
           <tbody><tr><th class="th2" style="width:6%">Nr</th><th class="th2">Nazwisko</th><th class="th2">Data urodzenia</th></tr>
           <tr><th colspan="3">Bramkarze</th></tr>
-          <tr><td class="r">1.</td><td class="l"><a >Keylor Navas</a></td><td>15 grudnia 1986 r.</td></tr>
-          <tr><td class="r">13.</td><td class="l"><a >Kiko Casilla</a></td><td>2 października 1986 r.</td></tr>
-          <tr><td class="r">31.</td><td class="l"><a >Rubén Yáñez</a></td><td>12 października 1993 r.</td></tr>
+          <tr><td class="r">1.</td><td class="l"><a>Keylor Navas</a></td><td>15 grudnia 1986 r.</td></tr>
+          <tr><td class="r">13.</td><td class="l"><a>Kiko Casilla</a></td><td>2 października 1986 r.</td></tr>
+          <tr><td class="r">31.</td><td class="l"><a>Rubén Yáñez</a></td><td>12 października 1993 r.</td></tr>
           <tr><th colspan="3">Obrońcy</th></tr>
           <tr><td class="r">2.</td><td class="l"><a >Daniel Carvajal</a></td><td>11 stycznia 1992 r.</td></tr>
           <tr><td class="r">3.</td><td class="l"><a >Pepe</a></td><td>26 lutego 1983 r.</td></tr>
-          <tr><td class="r">4.</td><td class="l"><a Sergio Ramos</a></td><td>30 marca 1986 r.</td></tr>
+          <tr><td class="r">4.</td><td class="l"><a >Sergio Ramos</a></td><td>30 marca 1986 r.</td></tr>
           <tr><td class="r">5.</td><td class="l"><a >Raphaël Varane</a></td><td>25 kwietnia 1993 r.</td></tr>
           <tr><td class="r">6.</td><td class="l"><a >Nacho</a></td><td>18 stycznia 1990 r.</td></tr>
           <tr><td class="r">12.</td><td class="l"><a >Marcelo</a></td><td>12 maja 1988 r.</td></tr>
