--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
 
           Nr. konta: 66 12340 3258 12335 1134 4385 6337
         </p></div>
-        <div class="col-md-6"> <img src="images/contact1.jpg" class="img-responsive"> </div></div></div></div>
+        <div class="col-md-6"> <img src="images/contact1.jpg" class="img-responsive" alt="contact"> </div></div></div></div>
       </div>
     </div>
     <footer class="section section-primary">
