--- a/table.html
+++ b/table.html
@@ -64,7 +64,7 @@
       </div>
       <div class="cover-image"></div>
       <div class="container myCaption" >
-        <table class="table" >
+        <table class="table" style="color:black;">
             <tbody><tr><th style="width:4%;">Lp.</th><th>Drużyna</th><th style="width:6%;">M</th><th style="width:6%;">Pkt</th><th style="width:6%;">Z</th><th style="width:6%;">R</th><th style="width:6%;">P</th><th style="width:14%;">Bramki</th></tr>
 
 
