--- a/team.html
+++ b/team.html
@@ -63,7 +63,7 @@
       </div>
       <div class="cover-image"></div>
       <div class="container myCaption" >
-        <table class="table" >
+        <table class="table"  style="color:black;">
           <tbody><tr><th class="th2" style="width:6%">Nr</th><th class="th2">Nazwisko</th><th class="th2">Data urodzenia</th></tr>
           <tr><th colspan="3">Bramkarze</th></tr>
           <tr><td class="r">1.</td><td class="l"><a>Keylor Navas</a></td><td>15 grudnia 1986 r.</td></tr>
