--- a/table.html
+++ b/table.html
@@ -6,7 +6,7 @@
     <title>Real Madrid</title>
     <meta charset="UTF-8">
 
-        <link rel="stylesheet" type="text/css" href="css/team.css">
+        <link rel="stylesheet" type="text/css" href="css/table.css">
             <link rel="stylesheet" type="text/css" href="myBoot.css">
 
 
