--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Real Madrid</title>
+    <title>Contact</title>
     <meta charset="UTF-8">
 
         <link rel="stylesheet" type="text/css" href="css/contact.css">
