--- a/info.html
+++ b/info.html
@@ -2,7 +2,7 @@
 
 <html lang="pl">
   <head>
-    <title>Real Madrid</title>
+    <title>Info</title>
     <meta charset="UTF-8">
 
     <link rel="stylesheet" type="text/css" href="css/info.css">
