--- a/table.html
+++ b/table.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Real Madrid</title>
+    <title>Table</title>
     <meta charset="UTF-8">
 
         <link rel="stylesheet" type="text/css" href="css/table.css">
