--- a/team.html
+++ b/team.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html><head>
-    <title>Real Madrid</title>
+    <title>Team</title>
     <meta charset="UTF-8">
 
         <link rel="stylesheet" type="text/css" href="css/team.css">
