--- a/form.html
+++ b/form.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <title>Index</title>
+
+<head>
+    <title>Form</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
-    <link rel="stylesheet" type="text/css" href="myBoot.css">
+
+        <link rel="stylesheet" type="text/css" href="css/table.css">
+            <link rel="stylesheet" type="text/css" href="myBoot.css">
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,41 +15,41 @@
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
+
   </head>
 
   <body>
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-            ga('create', 'UA-86216850-1', 'auto');
-            ga('send', 'pageview');
+      ga('create', 'UA-86216850-1', 'auto');
+      ga('send', 'pageview');
 
-        </script>
-
+    </script>
     <div class="cover">
       <div class="navbar navbar-default" id="menu">
         <div class="container">
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle" >
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html"><span>RealMadrid.pl</span></a>
+            <a class="navbar-brand" href="#"><span>RealMadrid.pl</span></a>
           </div>
           <div class="collapse navbar-collapse" id="navbar-ex-collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li class="active">
+              <li >
                 <a href="index.html">Home</a>
               </li>
               <li>
                 <a href="team.html">Drużyna</a>
               </li>
-              <li>
+              <li class="active">
                 <a href="table.html">Tabela</a>
               </li>
               <li>
@@ -56,21 +58,32 @@
               <li>
                 <a href="contact.html">Kontakt</a>
               </li>
-            </ul>
+                          </ul>
           </div>
         </div>
       </div>
       <div class="cover-image"></div>
       <div class="container myCaption" >
-        <div class="row">
-          <div class="col-md-12 text-center" id="captionDiv">
-            <h1>RealMadrid.pl</h1>
-            <p>Witamy na największym Polskim portalu dla kibiców drużyny Realu Madryt!</p>
-            <br>
-            <br>
-            <a class="btn btn-lg btn-default" href="form.html">Kliknij tutaj</a>
-          </div>
-        </div>
+          <h3>Wyślij wiadomość</h3>
+          <form>
+            <div class="form-group">
+              <label for="formGroupExampleInput">Podaj Imię</label>
+              <input type="text" class="form-control" id="firstname" >
+            </div>
+
+            <div class="form-group">
+              <label for="formGroupExampleInput">Podaj Nazwisko</label>
+              <input type="text" class="form-control" id="name" >
+            </div>
+
+            <div class="form-group">
+              <label for="formGroupExampleInput">Podaj treść wiadomości</label>
+              <input type="text" class="form-control" id="message" >
+            </div>
+
+            <button type="submit" class="btn btn-primary">Wyślij wiadomość</button>
+
+          </form>
       </div>
     </div>
     <footer class="section section-primary">
