--- a/form.html
+++ b/form.html
@@ -119,6 +119,11 @@
         </div>
       </div>
     </footer>
-  
+    
+    <script type="text/javascript">
+    function sendMessage(){
+      alert("Wiadomość została wysłana");
+    }
+  </script>
 
 </body></html>
