--- a/form.html
+++ b/form.html
@@ -16,6 +16,7 @@
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
 
+    <script type="text/javascript" href="form.js"></script>
   </head>
 
   <body>
