--- a/form.html
+++ b/form.html
@@ -70,7 +70,7 @@
           <form>
             <div class="form-group">
               <label for="formGroupExampleInput" >Podaj Imię</label>
-              <input type="text" class="form-control" id="firstname" >
+              <input type="text" class="form-control" id="firstname" autofocus >
             </div>
 
             <div class="form-group">
