--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
           <div class="collapse navbar-collapse" id="navbar-ex-collapse">
             <ul class="nav navbar-nav navbar-right">
               <li class="active">
-                <a href="index.html">Home</a>
+                <a href="index.html" id="home">Home</a>
               </li>
               <li>
-                <a href="team.html">Drużyna</a>
+                <a href="team.html" id="team">Drużyna</a>
               </li>
               <li>
-                <a href="table.html">Tabela</a>
+                <a href="table.html" id="table">Tabela</a>
               </li>
               <li>
-                <a href="info.html">Informacje</a>
+                <a href="info.html" id="info">Informacje</a>
               </li>
               <li>
-                <a href="contact.html">Kontakt</a>
+                <a href="contact.html" id="contact">Kontakt</a>
               </li>
             </ul>
           </div>
@@ -68,7 +68,7 @@
             <p>Witamy na największym Polskim portalu dla kibiców drużyny Realu Madryt!</p>
             <br>
             <br>
-            <a class="btn btn-lg btn-default" href="form.html">Kliknij tutaj</a>
+            <a class="btn btn-lg btn-default" href="form.html" id="form">Kliknij tutaj</a>
           </div>
         </div>
       </div>
