--- a/table.html
+++ b/table.html
@@ -49,7 +49,7 @@
               <li>
                 <a href="team.html">Drużyna</a>
               </li>
-              <li class="active">
+              <li class="active" id="tableLI">
                 <a href="table.html">Tabela</a>
               </li>
               <li>
