--- a/table.html
+++ b/table.html
@@ -29,6 +29,8 @@
       ga('send', 'pageview');
 
     </script>
+
+
     <div class="cover">
       <div class="navbar navbar-default" id="menu">
         <div class="container">
@@ -163,5 +165,14 @@
       </div>
     </footer>
   
+  <script type="text/javascript">
+var _mfq = _mfq || [];
+  (function() {
+    var mf = document.createElement("script");
+    mf.type = "text/javascript"; mf.async = true;
+    mf.src = "//cdn.mouseflow.com/projects/88739822-d0a3-4832-bba1-546e09755d44.js";
+    document.getElementsByTagName("head")[0].appendChild(mf);
+  })();
+</script>
 
 </body></html>
