--- a/index.html
+++ b/index.html
@@ -118,4 +118,10 @@ var _mfq = _mfq || [];
     document.getElementsByTagName("head")[0].appendChild(mf);
   })();
 </script>
+
+<a title="Real Time Analytics" href="http://clicky.com/101011571"><img alt="Real Time Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+<script src="//static.getclicky.com/js" type="text/javascript"></script>
+<script type="text/javascript">try{ clicky.init(101011571); }catch(e){}</script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101011571ns.gif" /></p></noscript>
+
 </body></html>
